Render animation doesn't take in account compositor parameter animation #57939

Closed
opened 2018-11-19 15:36:51 +01:00 by Răzvan Cosmin Rădulescu · 10 comments

System Information

 $ lsb_release -a
No LSB modules are available.
Distributor ID: Ubuntu
Description:    Ubuntu 18.10
Release:        18.10
Codename:       cosmic
 $ uname -a
Linux alienware 4.18.0-10-generic #11-Ubuntu SMP Thu Oct 11 15:13:55 UTC 2018 x86_64 x86_64 x86_64 GNU/Linux
 $ lshw -C display
WARNING: you should run this program as super-user.
  *-display
       description: VGA compatible controller
       product: GK107M [GeForce GT 750M]
       vendor: NVIDIA Corporation
       physical id: 0
       bus info: pci@0000:01:00.0
       version: a1
       width: 64 bits
       clock: 33MHz
       capabilities: vga_controller bus_master cap_list rom
       configuration: driver=nouveau latency=0
       resources: irq:30 memory:d0000000-d0ffffff memory:a0000000-afffffff memory:b0000000-b1ffffff ioport:4000(size=128) memory:d1000000-d107ffff
  *-display
       description: VGA compatible controller
       product: 4th Gen Core Processor Integrated Graphics Controller
       vendor: Intel Corporation
       physical id: 2
       bus info: pci@0000:00:02.0
       version: 06
       width: 64 bits
       clock: 33MHz
       capabilities: vga_controller bus_master cap_list rom
       configuration: driver=i915 latency=0
       resources: irq:29 memory:d2000000-d23fffff memory:c0000000-cfffffff ioport:5000(size=64) memory:c0000-dffff

Blender Version
Broken: 2.80 alpha 2, hash: f520f01b46

Short description of error
I've only tried the texture node in the compositor but it's possible other nodes are affected too. So when rendering animation, if I try to animate a property on the Texture node in the compositor say (offset) - check attached blender file - the property doesn't actually get updated as the time progresses.

Exact steps for others to reproduce the error
Try to render animation (ctrl f12) and check to see that it's the same image when the texture should be animated via the Offset.Z property of the Texture node.
bug.blend

**System Information** ``` $ lsb_release -a No LSB modules are available. Distributor ID: Ubuntu Description: Ubuntu 18.10 Release: 18.10 Codename: cosmic $ uname -a Linux alienware 4.18.0-10-generic #11-Ubuntu SMP Thu Oct 11 15:13:55 UTC 2018 x86_64 x86_64 x86_64 GNU/Linux $ lshw -C display WARNING: you should run this program as super-user. *-display description: VGA compatible controller product: GK107M [GeForce GT 750M] vendor: NVIDIA Corporation physical id: 0 bus info: pci@0000:01:00.0 version: a1 width: 64 bits clock: 33MHz capabilities: vga_controller bus_master cap_list rom configuration: driver=nouveau latency=0 resources: irq:30 memory:d0000000-d0ffffff memory:a0000000-afffffff memory:b0000000-b1ffffff ioport:4000(size=128) memory:d1000000-d107ffff *-display description: VGA compatible controller product: 4th Gen Core Processor Integrated Graphics Controller vendor: Intel Corporation physical id: 2 bus info: pci@0000:00:02.0 version: 06 width: 64 bits clock: 33MHz capabilities: vga_controller bus_master cap_list rom configuration: driver=i915 latency=0 resources: irq:29 memory:d2000000-d23fffff memory:c0000000-cfffffff ioport:5000(size=64) memory:c0000-dffff ``` **Blender Version** Broken: 2.80 alpha 2, hash: f520f01b46b **Short description of error** I've only tried the texture node in the compositor but it's possible other nodes are affected too. So when rendering animation, if I try to animate a property on the Texture node in the compositor say (offset) - check attached blender file - the property doesn't actually get updated as the time progresses. **Exact steps for others to reproduce the error** Try to render animation (`ctrl f12`) and check to see that it's the same image when the texture should be animated via the `Offset.Z` property of the Texture node. [bug.blend](https://archive.blender.org/developer/F5637945/bug.blend)

Added subscriber: @razcore

Added subscriber: @razcore

#58644 was marked as duplicate of this issue

#58644 was marked as duplicate of this issue
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-20 15:54:05 +01:00
Member

Can confirm this.

--debug-depsgraph outputs:

on file load

deg_graph_id_tag_update: id=SCScene flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=NTCompositing Nodetree flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=OBCamera flags=TRANSFORM, GEOMETRY, COPY_ON_WRITE
deg_graph_id_tag_update: id=ACCameraAction flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=CACamera flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=GRMaster Collection flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=WOWorld flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=NTCompositing Nodetree flags=TIME, COPY_ON_WRITE
deg_graph_id_tag_update: id=ACCompositing NodetreeAction flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=TENoise flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=SCScene flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=NTCompositing Nodetree flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=OBCamera flags=TRANSFORM, GEOMETRY, COPY_ON_WRITE
deg_graph_id_tag_update: id=ACCameraAction flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=CACamera flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=GRMaster Collection flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=WOWorld flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=NTCompositing Nodetree flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=ACCompositing NodetreeAction flags=COPY_ON_WRITE
deg_graph_id_tag_update: id=IMViewer Node flags=LEGACY_0
deg_graph_id_tag_update: id=TENoise flags=COPY_ON_WRITE
Depsgraph built in 0.000341 seconds.

on frame change

[SCScene :: All]: Operation is entry point for update: ANIMATION()
[SCScene :: All]: Operation is entry point for update: ANIMATION()
[SCScene :: All]: Accumulated recalc bits for OBCamera: 1
[SCScene :: All]: Accumulated recalc bits for ACCameraAction: 2
[SCScene :: All]: Accumulated recalc bits for CACamera: 3
[SCScene :: All]: Accumulated recalc bits for NTCompositing Nodetree: 6
[SCScene :: All]: Accumulated recalc bits for ACCompositing NodetreeAction: 2
[SCScene :: All]: BKE_animsys_eval_animdata on NTCompositing Nodetree (0x7f14ab9ed408) at time 8.000000
[SCScene :: All]: BKE_animsys_eval_animdata on CACamera (0x7f14ab9ed008) at time 8.000000
[SCScene :: All]: BKE_nodetree_shading_params_eval on NTCompositing Nodetree (0x7f14ab9ed408)
Depsgraph updated in 0.000123 seconds.

on render

Saved: '/tmp/T579390001.png'
 Time: 00:00.09 (Saving: 00:00.04)

etc... nothing else though

BUT: would expect something from the [RENDER] like (when e.g. transform is animated):

[RENDER]: Operation is entry point for update: TRANSFORM_LOCAL()
[RENDER]: Operation is entry point for update: COPY_ON_WRITE()
...

@Sergey: one for you?

Can confirm this. `--debug-depsgraph` outputs: on file load ``` deg_graph_id_tag_update: id=SCScene flags=COPY_ON_WRITE deg_graph_id_tag_update: id=NTCompositing Nodetree flags=COPY_ON_WRITE deg_graph_id_tag_update: id=OBCamera flags=TRANSFORM, GEOMETRY, COPY_ON_WRITE deg_graph_id_tag_update: id=ACCameraAction flags=COPY_ON_WRITE deg_graph_id_tag_update: id=CACamera flags=COPY_ON_WRITE deg_graph_id_tag_update: id=GRMaster Collection flags=COPY_ON_WRITE deg_graph_id_tag_update: id=WOWorld flags=COPY_ON_WRITE deg_graph_id_tag_update: id=NTCompositing Nodetree flags=TIME, COPY_ON_WRITE deg_graph_id_tag_update: id=ACCompositing NodetreeAction flags=COPY_ON_WRITE deg_graph_id_tag_update: id=TENoise flags=COPY_ON_WRITE deg_graph_id_tag_update: id=SCScene flags=COPY_ON_WRITE deg_graph_id_tag_update: id=NTCompositing Nodetree flags=COPY_ON_WRITE deg_graph_id_tag_update: id=OBCamera flags=TRANSFORM, GEOMETRY, COPY_ON_WRITE deg_graph_id_tag_update: id=ACCameraAction flags=COPY_ON_WRITE deg_graph_id_tag_update: id=CACamera flags=COPY_ON_WRITE deg_graph_id_tag_update: id=GRMaster Collection flags=COPY_ON_WRITE deg_graph_id_tag_update: id=WOWorld flags=COPY_ON_WRITE deg_graph_id_tag_update: id=NTCompositing Nodetree flags=COPY_ON_WRITE deg_graph_id_tag_update: id=ACCompositing NodetreeAction flags=COPY_ON_WRITE deg_graph_id_tag_update: id=IMViewer Node flags=LEGACY_0 deg_graph_id_tag_update: id=TENoise flags=COPY_ON_WRITE Depsgraph built in 0.000341 seconds. ``` on frame change ``` [SCScene :: All]: Operation is entry point for update: ANIMATION() [SCScene :: All]: Operation is entry point for update: ANIMATION() [SCScene :: All]: Accumulated recalc bits for OBCamera: 1 [SCScene :: All]: Accumulated recalc bits for ACCameraAction: 2 [SCScene :: All]: Accumulated recalc bits for CACamera: 3 [SCScene :: All]: Accumulated recalc bits for NTCompositing Nodetree: 6 [SCScene :: All]: Accumulated recalc bits for ACCompositing NodetreeAction: 2 [SCScene :: All]: BKE_animsys_eval_animdata on NTCompositing Nodetree (0x7f14ab9ed408) at time 8.000000 [SCScene :: All]: BKE_animsys_eval_animdata on CACamera (0x7f14ab9ed008) at time 8.000000 [SCScene :: All]: BKE_nodetree_shading_params_eval on NTCompositing Nodetree (0x7f14ab9ed408) Depsgraph updated in 0.000123 seconds. ``` on render ``` Saved: '/tmp/T579390001.png' Time: 00:00.09 (Saving: 00:00.04) etc... nothing else though ``` **BUT**: would expect something from the [RENDER] like (when e.g. transform is animated): ``` [RENDER]: Operation is entry point for update: TRANSFORM_LOCAL() [RENDER]: Operation is entry point for update: COPY_ON_WRITE() ... ``` @Sergey: one for you?

Added subscriber: @brecht

Added subscriber: @brecht

Technically, @brecht is the boss of render pipeline.

From a developer's point of view, i do not see any calls to DEG_evaluate_on_framechange(). So my guess is that this is something where old dependency graph had hacks to do animation evaluation directly in various places.

Technically, @brecht is the boss of render pipeline. From a developer's point of view, i do not see any calls to `DEG_evaluate_on_framechange()`. So my guess is that this is something where old dependency graph had hacks to do animation evaluation directly in various places.
Sergey Sharybin was unassigned by Philipp Oeser 2018-11-21 09:24:24 +01:00
Brecht Van Lommel was assigned by Philipp Oeser 2018-11-21 09:24:24 +01:00
Member

assigning to @brecht then

assigning to @brecht then

Added subscriber: @xarts

Added subscriber: @xarts

This issue was referenced by 9375c941b7

This issue was referenced by 9375c941b75462b1e03274b7f7a23a0ae81d00e4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57939
No description provided.