Fix T57939: animated values in compositing nodes not working.

For now this is not part of copy-on-write, and needs extra animation evaluation.

Differential Revision: https://developer.blender.org/D4019